simple-slides/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: simple-slides
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: alkrauss48/simple-slides-laravel:dev-main
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: simple-slides
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
