simple-slides/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: simple-slides
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: database
      # initContainers:
      #   - name: database-data-permission-fix
      #     image: busybox
      #     command: ["/bin/chmod","-R","777", "/data"]
      #     volumeMounts:
      #       - name: database
      #         mountPath: /data
      containers:
      - name: db
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: database
          mountPath: /var/lib/postgresql/data
          subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: simple-slides
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 5432
